add ingress class handlers
